update blog.html, allow no header image formatting

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,7 +2,7 @@
 layout: page
 permalink: /blog.html
 title: Blog
-header-img:  /assets/img/publications.png
+header-img:  
 last-updated: 2020-10-30 5:55 PM
 ---
 
