--- a/pages/blog.html
+++ b/pages/blog.html
@@ -2,51 +2,120 @@
 layout: page
 permalink: /blog.html
 title: Blog
+description: I write about cyber threat intelligence
 header-img:  
 last-updated: 2020-10-30 5:55 PM
 ---
 
-<div class="card-columns">
-  {% for post in site.posts %}
-    {% if post.type == "card-img-top" %}
-      <a href="{{ post.url }}">
-        <div class="card">
-          <img class="card-img-top" src="{{ post.image }}" alt="{{ post.caption }}">
-          <div class="card-body">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.description }}</p>
-          </div>
+    <!-- Page Content -->
+    <div class="container">
+
+      <div class="row">
+
+        <!-- Blog Entries Column -->
+        <div class="col-md-8">
+
+          <h1 class="my-4" style="font-family:Courgette;">{{ page.title }}</h1>
+          
+          <!-- Blog Post -->
+          {% for post in site.posts %}
+            <div class="card mb-4">
+              <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
+              <div class="card-body">
+                <h2 class="card-title">{{ post.title }}</h2>
+                <p class="card-text">{{ post.description }}</p>
+                {% if site.nav-color == "demo"  %}
+                <a href="{{ post.url }}" class="btn btn-primary text-white" style="background-color:#00334e">Read Article &rarr;</a>
+                {% else %}
+                <a href="{{ post.url }}" class="btn btn-primary">Read Article &rarr;</a>
+                {% endif %}
+              </div>
+              <div class="card-footer text-muted">
+                Posted on {{ post.date }} by
+                <a href="#">{{ post.author }}</a>
+              </div>
+            </div>
+          {% endfor %}
+
+          <!-- Pagination -->
+          <ul class="pagination justify-content-center mb-4">
+            <li class="page-item">
+              <a class="page-link" href="#">&larr; Older</a>
+            </li>
+            <li class="page-item disabled">
+              <a class="page-link" href="#">Newer &rarr;</a>
+            </li>
+          </ul>
+
         </div>
-      </a>
-    {% elsif post.type == "card-dated" %}
-      <a href="{{ post.url }}">
-        <div class="card">
-          <img class="card-img-top" src="{{ post.image }}" alt="{{ post.caption }}">
-          <div class="card-body">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.description }}</p>
-            <p class="card-text"><small class="text-muted">Last updated {{ post.last-updated }}</small></p>
+
+        <!-- Sidebar Widgets Column -->
+        <div class="col-md-4">
+
+          <!-- Search Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Search</h5>
+            <div class="card-body">
+              <div class="input-group">
+                <input type="text" class="form-control" placeholder="Search for...">
+                <span class="input-group-btn">
+                  <button class="btn btn-secondary" type="button">Go!</button>
+                </span>
+              </div>
+            </div>
           </div>
-        </div>  
-      </a>
-    {% elsif post.type == "card-no-img" %}
-      <a href="{{ post.url }}">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.description }}</p>
+
+          <!-- Categories Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Categories</h5>
+            <div class="card-body">
+              <div class="row">
+                <div class="col-lg-6">
+                  <ul class="list-unstyled mb-0">
+                    {% for tag in site.tags %}
+                    <li>
+                      {% if site.nav-color == "demo"  %}
+                      <a href="#" class="btn btn-sm mt-1 mb-1 text-white" style="background-color:#5588a3">{{ tag[0] }}</a>
+                      {% else %}
+                      <a href="#" class="btn btn-sm mt-1 mb-1 btn-dark">{{ tag[0] }}</a>
+                      {% endif %}
+                    </li>
+                    {% endfor %}
+                  </ul>
+                </div>
+              </div>
+            </div>
           </div>
-        </div>
-      </a>
-    {% else %}
-      <a href="{{ post.url }}">
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">{{ post.title }}</h5>
-            <p class="card-text">{{ post.description }}</p>
+
+          <!-- Side Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">All Articles</h5>
+            <div class="card-body">
+            {% for post in site.posts %}
+                  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+            {% endfor %}
+            </div>
           </div>
-        </div>
-      </a>
-    {% endif %}
-  {% endfor %}
-</div>
+
+
+     <!-- Twitter Side Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Twitter Widget</h5>
+            <div class="card-body">
+              <a class="twitter-timeline" data-height="450" data-theme="light" href="https://twitter.com/tbutler0x90?ref_src=twsrc%5Etfw">Tweets by tbutler0x90</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>           
+            </div>
+          </div>
+
+
+   <!-- Side Widget -->
+          <div class="card my-4">
+            <h5 class="card-header">Side Widget</h5>
+            <div class="card-body">
+              <p> You can make this into anything you want  </p>
+            </div>
+          </div>
+      </div>
+      <!-- /.row -->
+
+    </div>
+    <!-- /.container -->
