remove legacy artifacts

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,5 +15,5 @@ last-updated: 2020-10-30 5:55 PM
     <label for="exampleFormControlTextarea1">Get in Touch</label>
     <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="btn text-white" style="background-color:{{ site.card-color }};">Submit</button>
 </form>
