--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,16 +4,21 @@ permalink: contact.html
 title: Contact Me
 header-img:  
 last-updated: 2020-10-30 5:55 PM
----
+---  
+
 <h1 class="mx-auto" style="font-family:Courgette;">{{ page.title }}</h1>
+
 <form name="contact" method="POST" data-netlify="true">
-  <div class="form-group">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-  </div>
-  <div class="form-group">
-    <label for="exampleFormControlTextarea1">Get in Touch</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-  </div>
-  <button type="submit" class="btn text-white" style="background-color:{{ site.card-color }};">Submit</button>
+  <p>
+    <label>Your Name: <input type="text" name="name" /></label>   
+  </p>
+  <p>
+    <label>Your Email: <input type="email" name="email" /></label>
+  </p>
+  <p>
+    <label>Message: <textarea name="message"></textarea></label>
+  </p>
+  <p>
+    <button class="btn text-white" style="background-color:#00334e;" type="submit">Send</button>
+  </p>
 </form>
