--- a/pages/blog.html
+++ b/pages/blog.html
@@ -7,102 +7,41 @@ header-img:
 last-updated: 2020-10-30 5:55 PM
 ---
 
-    <!-- Page Content -->
-    <div class="container">
-
-      <div class="row">
-        <!-- Blog Entries Column -->
-        <div class="col-md-8">
-          <h1 class="my-4" style="font-family:Courgette;">{{ page.title }}</h1>
-          <!-- Blog Post -->
+<!-- Page Content -->
+  <div class="row">
+    <!-- Blog Entries Column -->
+    <div class="col-md-8">
+          <div class="col-md-12">
           {% for post in site.posts %}
-            <div class="card mb-4">
-              <img class="card-img-top" src="http://placehold.it/750x300" alt="Card image cap">
-              <div class="card-body">
-                <h2 class="card-title">{{ post.title }}</h2>
-                <p class="card-text">{{ post.description }}</p>
-                <a href="{{ post.url }}" class="btn btn-primary text-white" style="background-color:{{ site.card-color }}">Read Article &rarr;</a>
+              <div class="blogcard {{post.card}} mb-4 mt-4" style="width: 100%;">
+                <h3><a href="{{ post.url }}" class="nohighlight">{{ post.title }}</a></h3>
+                  <a href="#" class="badge badge-primary" style="background-color: rgba(78, 34, 208, 0.1);color: #4e22d0;">{{post.tag}}</a>  
+                <p>{{post.description}}</p>
+                <p><i>{{post.lead}}</i></p>
               </div>
-              <div class="card-footer text-muted">
-                Posted on {{ post.date }} by
-                <a href="#">{{ post.author }}</a>
-              </div>
-            </div>
           {% endfor %}
-
-          <!-- Pagination -->
-          <ul class="pagination justify-content-center mb-4">
-            <li class="page-item">
-              <a class="page-link" href="#">&larr; Older</a>
-            </li>
-            <li class="page-item disabled">
-              <a class="page-link" href="#">Newer &rarr;</a>
-            </li>
-          </ul>
-
         </div>
-        <!-- Sidebar Widgets Column -->
-        <div class="col-md-4">
-          <!-- Search Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Search</h5>
-            <div class="card-body">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Search for...">
-                <span class="input-group-btn">
-                  <button class="btn btn-secondary" type="button">Go!</button>
-                </span>
-              </div>
-            </div>
-          </div>
+      <!-- Blog Post -->
+      {% for post in site.posts %}
+      {% endfor %}
 
-          <!-- Categories Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Categories</h5>
-            <div class="card-body">
-              <div class="row">
-                <div class="col-lg-6">
-                  <ul class="list-unstyled mb-0">
-                    {% for tag in site.tags %}
-                    <li>
-                      <a href="#" class="btn btn-sm mt-1 mb-1 text-white" style="background-color:{{ site.card-color }}">{{ tag[0] }}</a>
-                    </li>
-                    {% endfor %}
-                  </ul>
-                </div>
-              </div>
-            </div>
-          </div>
+      <!-- Pagination -->
+      <ul class="pagination justify-content-center mb-3">
+        <li class="page-item">
+          <a class="page-link" href="#">&larr; Older</a>
+        </li>
+        <li class="page-item disabled">
+          <a class="page-link" href="#">Newer &rarr;</a>
+        </li>
+      </ul>
 
-          <!-- Side Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">All Articles</h5>
-            <div class="card-body">
-            {% for post in site.posts %}
-                  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-            {% endfor %}
-            </div>
-          </div>
-
-
-     <!-- Twitter Side Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Twitter Widget</h5>
-            <div class="card-body">
-              <a class="twitter-timeline" data-height="450" data-theme="light" href="https://twitter.com/{{ site.twitter }}?ref_src=twsrc%5Etfw">Tweets by {{ site.twitter }}</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>           
-            </div>
-          </div>
-
-
-   <!-- Side Widget -->
-          <div class="card my-4">
-            <h5 class="card-header">Side Widget</h5>
-            <div class="card-body">
-              <p> You can make this into anything you want  </p>
-            </div>
-          </div>
-
-      </div>
-      <!-- /.row -->
     </div>
-    <!-- /.container -->
+      <!-- Twitter Side Widget -->
+      <div class="card my-4 shadow border-0">
+          <a class="twitter-timeline" data-height="2300" data-theme="light" href="https://twitter.com/{{ site.twitter }}?ref_src=twsrc%5Etfw"></a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>           
+      </div>
+
+
+  </div>
+  <!-- /.row -->
+</div>
