--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1,12 +1,16 @@
 ---
 layout: page
 permalink: /publications.html
-title: My Recent Publications
+title: Publications
 header-img: 
 last-updated: 2020-10-30 5:55 PM
 ---
-
-<h1 class="mx-auto" style="font-family:Courgette;">{{ page.title }}</h1>
+{% assign theme = site.data.themes[site.ui_theme] %}
+<div class="blogcard  card-1 mb-4" style="width: 100%;">
+  <div class="card-body">
+    <h5 class="card-title text-center" style="font-size:{{ theme.post-title-size }};font-weight:{{ theme.post-font-weight }};">{{ page.title }}</h5>
+  </div>
+</div>
 {% bibliography -f papers %}
 
 
